Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18727

general protection failure in distribute_txn_insert_by_batchid()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      [ 4453.948205] general protection fault, probably for non-canonical address 0x5a5a5a5a5a5a59a2: 0000 [#1] PREEMPT SMP DEBUG_PAGEALLOC
      [ 4453.948350] CPU: 1 PID: 274411 Comm: tgt_recover_0 Tainted: G           O     --------- -  - 4.18.0 #11
      [ 4453.948403] Hardware name: QEMU Standard PC (i440FX + PIIX, 1996), BIOS 1.16.3-1.fc39 04/01/2014
      [ 4453.948469] RIP: 0010:distribute_txn_insert_by_batchid+0xb3/0x200 [ptlrpc]
      [ 4453.948610] Code: 45 60 45 31 ed 49 39 c0 0f 84 3c 01 00 00 4c 8d 75 10 4c 89 e7 e8 dd 54 6f c2 48 8b 45 10 48 8d 98 48 ff ff ff 49 39 c6 74 24 <48> 83 3b 00 74 0b 48 89 ee 48 89 df e8 ec a2 ff ff 48 8b 83 b8 00
      [ 4453.948702] RSP: 0018:ffff99f061263d78 EFLAGS: 00010292
      [ 4453.948735] RAX: 5a5a5a5a5a5a5a5a RBX: 5a5a5a5a5a5a59a2 RCX: 0000000000000001
      [ 4453.948779] RDX: 0000000000000001 RSI: ffffffffc1008bc3 RDI: 00000000ffffffff
      [ 4453.948826] RBP: ffff99f056ac7c00 R08: ffff99f056ac7c60 R09: 0000000000000000
      [ 4453.948871] R10: ffff99f090627000 R11: ffff99f090626f28 R12: ffff99f055efa400
      [ 4453.948915] R13: 0000000000000000 R14: ffff99f056ac7c10 R15: ffff99f061836d80
      [ 4453.948962] FS:  0000000000000000(0000) GS:ffff99f166300000(0000) knlGS:0000000000000000
      [ 4453.949004] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [ 4453.949043] CR2: 00007fff3f32be40 CR3: 00000001523d0000 CR4: 0000000000350ea0
      [ 4453.949109] Call Trace:
      [ 4453.949133]  distribute_txn_replay_handle+0x8d5/0x2e10 [ptlrpc]
      [ 4453.952098]  ? _raw_spin_unlock_irqrestore+0x43/0x70
      [ 4453.952138]  target_recovery_thread+0x8db/0x1d80 [ptlrpc]
      [ 4453.952259]  ? target_send_reply+0x770/0x770 [ptlrpc]
      [ 4453.952376]  kthread+0x16e/0x1a0
      

      Attachments

        Activity

          People

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: